# trustnochain

./: Cargo.toml  trustchain_config.toml
sovrin-test/: Cargo.toml
sovrin-test/src/: main.rs
trustchain-api/: Cargo.toml
trustchain-cli/: Cargo.toml
trustchain-cli/src/: config.rs
trustchain-core/: Cargo.toml
trustchain-ffi/: Cargo.toml
trustchain-http/: Cargo.toml
trustchain-ion/: Cargo.toml
trustchain-sovrin/: Cargo.toml
trustchain-sovrin/src/: lib.rs  resolver.rs  verifier.rs
