[package]
name = "trustchain-sovrin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustchain-core = { path = "../trustchain-core" }
indy-vdr = {git = "https://github.com/hyperledger/indy-vdr"}
futures-executor = "0.3.30"
ssi = "0.7.0"
async-trait = "0.1.79"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
